--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6,10 +6,6 @@
 	color: white;
 }
 
-/*.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-nav>li>a:hover {*/
-/*	color: blue;*/
-/*}*/
-
 row {
 	display: flex;
 	flex-wrap: wrap;
@@ -30,6 +26,8 @@ row {
 
 .thumbnail img {
     width: 100%;
+    height: 100%;
+    max-height: 172px;
 }
 
 .thumbnail {
