--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,18 @@
 <% include ./partials/header %>
-
-	<p>taraStudio Landing Page</p>
-	<p><a href="/studios">View all studios</a></p>
-	
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/landing.css">
+<div class="container">
+ <div class="row">
+ 	<div class="col-lg-12">
+ 		<div class="content">
+ 		 <h1>taraStudio</h1>
+ 		 <h3>Book studios from all over the country</h3>
+ 		 <hr>
+ 	     <a href="/studios" class="btn btn-default btn-lg"><i class="fa fa-play"></i> Get Started!</a>
+ 		</div>
+ 	</div>
+ </div>
+</div>
+ 
+ <script src="scripts/background.js"></script>
 <% include ./partials/footer %>
