--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
 		<title>taraStudio</title>
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
+		<script src="https://code.jquery.com/jquery-git2.min.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse">
